# TaskScheduler

./: .gitignore  Dockerfile  README.md  alembic.ini  create_secret_from_env.sh  docker-compose.yml  entrypoint.sh  init-db.sql  pyproject.toml
alembic/: env.py
alembic/versions/: c9005f6db961_add_recurrence_column_to_tasks.py
app/: crud.py  database.py  main.py  models.py  schemas.py  task_executor.py
app/routes/: task_router.py
k8s/: .env  app-deployment.yaml  app-service.yaml  create-job.yaml  db-credentials.yaml  db-service.yaml  deployment.yaml  init-db.sql  insert-sample-task.yaml  mariadb-deployment.yaml  service.yaml
k8s/app/chart/job-chart/: Chart.yaml  values.yaml
k8s/app/chart/job-chart/templates/: cron-job.yaml
k8s/app/jobs/: crud-job.yaml
k8s/app/main/: app-config.yaml  app-d.yaml  db-credentials.yaml  maria-d.yaml
mariadb-job/: Chart.yaml  values.yaml
mariadb-job/templates/: job.yaml
