[tool.poetry]
name = "taskscheduler"
version = "0.1.0"
description = "task scheduler in python that interacts with a SQL database."
authors = ["RohitRathore1 <rohitrathore.imh55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
uvicorn = "^0.27.1"
flask = "^3.0.2"
apscheduler = "^3.10.4"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
httpx = "^0.27.0"
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
black = "^24.2.0"
mypy = "^1.9.0"
motor-types = "^1.0.0b4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
